<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hun_flag"
    tools:context="com.example.android.hungarianfunfactsquiz.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/layout_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal"
                android:text="@string/quiz_title"
                android:textSize="@dimen/title_text"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/question_margin_top"
                android:text="@string/question_1_question"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/answer_margin_top"
                >

                <RadioButton
                    android:id="@+id/question_1_answer_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1_answer_a"
                    android:textColor="@android:color/white"/>

                <RadioButton
                    android:id="@+id/question_1_answer_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1_answer_b"
                    android:textColor="@android:color/white"/>

                <RadioButton
                    android:id="@+id/question_1_answer_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1_answer_c"
                    android:textColor="@android:color/white"/>

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/question_margin_top"
                android:text="@string/question_3_question"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_dark"/>

            <EditText
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/answer_margin_top"
                android:id="@+id/question_3_answer"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/question_margin_top"
                android:text="@string/question_2_question"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                />



            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/answer_margin_top">

                <RadioButton
                    android:id="@+id/question_2_answer_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_answer_a"
                    android:textColor="@android:color/white"/>

                <RadioButton
                    android:id="@+id/question_2_answer_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_answer_b"
                    android:textColor="@android:color/white"/>

                <RadioButton
                    android:id="@+id/question_2_answer_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_answer_c"
                    android:textColor="@android:color/white"/>

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/question_margin_top"
                android:text="@string/question_4_question"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/answer_margin_top"
                android:text="@string/question_4_answer_a"
                android:id="@+id/question_4_answer_a"
                android:textColor="@android:color/white"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_4_answer_b"
                android:id="@+id/question_4_answer_b"
                android:textColor="@android:color/white"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_4_answer_c"
                android:id="@+id/question_4_answer_c"
                android:textColor="@android:color/white"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/question_margin_top"
                android:text="@string/question_5_question"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_dark"
                />

            <EditText
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/answer_margin_top"
                android:id="@+id/question_5_answer"
                android:inputType="number"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/question_margin_top"
                android:text="@string/question_6_question"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/answer_margin_top">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_6_answer_a"
                    android:id="@+id/question_6_answer_a"
                    android:textColor="@android:color/white"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_6_answer_b"
                    android:id="@+id/question_6_answer_b"
                    android:textColor="@android:color/white"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_6_answer_c"
                    android:id="@+id/question_6_answer_c"
                    android:textColor="@android:color/white"
                    />

            </RadioGroup>

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:onClick="ShowResult"
                    android:text="@string/submit_button_text"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="15sp" />

            </RelativeLayout>


        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>